@@ -123,6 +123,7 @@ SVN trunk (1.1.x):
    * unit modifications now round toward original value instead of truncating
    * changed resilient trait bonus from +7hp to +10%+3hp
    * decreased strong trait hitpoints bonus from 2 to 1
+   * added a fisher's clock to MP games to limit turn duration
  * new unit: added the Goblin Rouser
  * units and balancing changes:
    * changed Cuttlefish tentacle attack to swarm.  changed HP from 52 to 67
